# web-subscription

./: .Claude.md  .env.example  .gitignore  Claude.md  Dockerfile  main.py  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml
app/config/: settings.py
app/infrastructure/: calil_web_api.py  firestore.py  web3_api.py
app/models/: subscription.py
tests/: conftest.py  firestore_mock.py  test_calil_web_api.py  test_firestore.py  test_web3_api.py
