[project]
name = "web-subscription"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "google-cloud-firestore>=2.21.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.1",
    "stripe>=13.0.0",
]
